--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.10"
-ragged-buffer = "^0.2.10"
+ragged-buffer = "^0.2.11"
+msgpack = "^1.0.3"
+msgpack-numpy = "^0.4.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
