--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ click = "^8.1.3"
 sphinx-rtd-theme = "^1.0.0"
 Sphinx = "^4.5.0"
 autoapi = "^2.0.1"
+pytest = "^7.1.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
