--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,14 @@ cloudpickle = "^2.0.0"
 tqdm = "^4.63.1"
 click = "^8.1.3"
 
-
 [tool.poetry.dev-dependencies]
 sphinx-rtd-theme = "^1.0.0"
 Sphinx = "^4.5.0"
 autoapi = "^2.0.1"
 pytest = "^7.1.2"
+pre-commit = "^2.19.0"
+mypy = "^0.950"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
